<resources>
    <string name="app_name">BasicBug</string>
    <string name="chat_hint">메세지를 입력하세요.</string>
    <string name="chat_button">보내기</string>
    <string name="sample_message">sample message</string>
    <string name="base_friend_name">Unknown</string>
    <string name="sample_time">12:06</string>
    <string name="channel_push_message">메시지</string>
    <string name ="image_message_content">이미지</string>

    <!--main holder-->
    <string name="navigation_friends_item">친구</string>
    <string name="navigation_chatting_rooms_item">대화</string>
    <string name="navigation_settings_item">설정</string>

    <!--login-->
    <string name="login_success_message">로그인 성공!</string>
    <string name="login_fail_message">로그인 실패!</string>

    <!--config-->
    <string name="confirm">확인</string>

    <!--error-->
    <string name="load_fail_from_server">서버로부터 불러오기 실패</string>

</resources>
